Batch Master UI Changes

--- a/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <div class="col-md-6 col-lg-6">
-                <select formControlName="TimeOfDayMinutes" (change)="onTimeOfDayMinutesSelected($event)" class="form-control"  [attr.disabled]="IsStartDateDisable?'':null">
+                <select formControlName="TimeOfDayMinutes" (change)="onTimeOfDayMinutesSelected($event)" class="form-control" [attr.disabled]="IsStartDateDisable?'':null">
                   <option *ngFor="let sd of TimeOfDayMinutesList" [value]="sd.Identifier">{{sd.Name}}</option>
                 </select>
                 <div class="validation-msg" style="color:red">
@@ -93,34 +93,6 @@
             </div>
           </div>
           <div class="col-md-4 col-lg-4 form-group">
-            <div class="row">
-              <div class="col-sm-6">
-                <label>No End Date</label>
-                <div>
-                  <label class="switch d-block">
-                    <input type="checkbox" id="inputNoEndDate" formControlName="NoEndDate" [checked]="!IsEndDateRequired" value="" (change)="NoEndDateClicked($event.target)">
-                    <span class="slider round"></span>
-                  </label>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <label>Export to PDF</label>
-                <div>
-                  <label class="switch d-block">
-                    <!--<input type="checkbox" id="inputExportToPDF" formControlName="ExportToPDF">-->
-                    <input type="checkbox" id="inputExportToPDF" formControlName="ExportToPDF" [checked]="IsExportToPDF" value="" (change)="IsExportToPDFClicked($event.target)">
-
-                    <span class="slider round"></span>
-                  </label>
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-lg-4 form-group">
             <label>End Date</label><span class="text-danger" *ngIf="IsEndDateRequired">*</span>
             <div class="position-relative">
               <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filtershiftenddate"
@@ -137,6 +109,34 @@
               {{filterDateDiffErrorMessage}}
             </div>
           </div>
+          <!--<div class="col-md-4 col-lg-4 form-group">
+            <div class="row">
+              <div class="col-sm-6">
+                <label>No End Date</label>
+                <div>
+                  <label class="switch d-block">
+                    <input type="checkbox" id="inputNoEndDate" formControlName="NoEndDate" [checked]="!IsEndDateRequired" value="" (change)="NoEndDateClicked($event.target)">
+                    <span class="slider round"></span>
+                  </label>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <label>Export to PDF</label>
+                <div>
+                  <label class="switch d-block">
+                    <input type="checkbox" id="inputExportToPDF" formControlName="ExportToPDF" [checked]="IsExportToPDF" value="" (change)="IsExportToPDFClicked($event.target)">
+
+                    <span class="slider round"></span>
+                  </label>
+                </div>
+              </div>
+            </div>
+
+
+          </div>-->
+        </div>
+        <div class="row">
+
         </div>
       </div>
     </div>
