--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -3,7 +3,21 @@
     <span class="xs-title">Schedule Details</span>
   </div>
   <div class="card border-0 mb-2 card-shadow">
-    <div class="card-body">
+    <div class="card-header bg-white d-flex justify-content-between">
+      <div>
+        <label class="m-0">Details</label>
+      </div>
+      <div>
+        <button type="button" id="btnCollapsedDetails"
+                class="toggle-btn border-0 p-0 bg-transparent"
+                (click)="isCollapsedDetails = !isCollapsedDetails"
+                [attr.aria-expanded]="!isCollapsedDetails"
+                aria-controls="collapseDetails">
+          <span class="fa" [ngClass]="!isCollapsedDetails? 'fa-angle-down' : 'fa-angle-right'"></span>
+        </button>
+      </div>
+    </div>
+    <div class="card-body" id="collapseDetails" [ngbCollapse]="isCollapsedDetails">
       <div class="row form-group">
         <div class="col-md-4 col-lg-4">
           <label id="lblName" for="inputRoleName">Name</label>
@@ -38,21 +52,103 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-lg-4 form-group">
-          <label>Export To PDF</label>
-          <div *ngIf="schedule.IsExportToPDF">Yes </div>
-          <div *ngIf="!schedule.IsExportToPDF">No </div>
+    </div>
+
+  </div>
+  <div class="card border-0 mb-2 card-shadow">
+    <div class="card-header bg-white d-flex justify-content-between">
+      <div>
+        <label class="m-0">Batches</label>
+      </div>
+      <div>
+        <button type="button" id="btnCollapsedUsers"
+                class="toggle-btn border-0 p-0 bg-transparent"
+                (click)="getBatchMaster()"
+                [attr.aria-expanded]="!isCollapsedBatch"
+                aria-controls="collapseUsers">
+          <span class="fa" [ngClass]="!isCollapsedBatch? 'fa-angle-down' : 'fa-angle-right'"></span>
+        </button>
+      </div>
+    </div>
+    <div class="card-body" id="CollapsedBatch" [ngbCollapse]="isCollapsedBatch">
+      <div class="d-flex justify-content-center mb-4">
+        <div class="pagination-mat position-relative">
+          <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
+          </mat-paginator>
         </div>
       </div>
+      <div class="widget-area-grid padding-0">
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+
+          <!-- Position Column -->
+          <ng-container matColumnDef="id">
+            <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+            <td mat-cell *matCellDef="let element">{{element.Identifier}}</td>
+          </ng-container>
+          <!-- Position Column -->
+          <ng-container matColumnDef="BatchName">
+            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Batch Name </th>
+            <td mat-cell *matCellDef="let element">{{element.BatchName}}</td>
+          </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="IsExecuted">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Is Executed </th>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf="element.IsExecuted">Yes</span>
+              <span *ngIf="!element.IsExecuted">No</span>
+
+            </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="IsDataReady">
+            <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Is Data Ready </th>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf="element.IsDataReady">Yes</span>
+              <span *ngIf="!element.IsDataReady">No</span>
+
+            </td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="DataExtractionDate">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Data Extraction Day </th>
+            <td mat-cell *matCellDef="let element"> {{element.DataExtractionDate  | date:"dd/MM/yyyy"}} </td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="BatchExecutionDate">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Batch Execution Day </th>
+            <td mat-cell *matCellDef="let element"> {{element.BatchExecutionDate   | date:"dd/MM/yyyy"}}</td>
+          </ng-container>
+          <ng-container matColumnDef="Actions">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef> Action</th>
+            <td mat-cell *matCellDef="let element">
+              <div class="action-btns btn-tbl-action">
+                <button *ngIf="!element.IsExecuted" type="button" id="btnViewRole" title="Run Now">
+                  <span style="color:limegreen" class="fa fa-play"></span>
+                </button>
+              </div>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
+
     </div>
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
       <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToScheduleEdit()"
-              *ngIf="schedule.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">Update</button>
+              *ngIf="schedule.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">
+        Update
+      </button>
       <button class="btn-footer-fill-delete bg-danger mr-2" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Delete' }))"
-              id="btnDelete" (click)="deleteSchedule()">Delete</button>
+              id="btnDelete" (click)="deleteSchedule()">
+        Delete
+      </button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
