--- a/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
+++ b/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
@@ -94,7 +94,7 @@
       </div>
       <div class="filter-body-left d-flex flex-column stylescrollbar">
         <div class="form-group">
-          <label>User Id</label>
+          <label>Customer</label>
           <input type="text" class="form-control" formControlName="filterUserId">
         </div>
         <div class="form-group">
