--- a/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
+++ b/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
@@ -51,6 +51,7 @@
             <th class="width10" mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
+                <button  (click)="ViewHTML(element)" type="button" title="View Html"><span class="fa fa-file-text-o"></span></button>
                 <button type="button" title="Export PDF"><span class="fa fa-file-pdf-o"></span></button>
               </div>
             </td>
