--- a/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
+++ b/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
@@ -51,7 +51,7 @@
             <th class="width10" mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button  (click)="ViewHTML(element)" type="button" title="View Html"><span class="fa fa-file-text-o"></span></button>
+                <button  (click)="ViewHTML(element)" type="button" title="View Html"><span class="fa fa-download"></span></button>
                 <button type="button" title="Export PDF"><span class="fa fa-file-pdf-o"></span></button>
               </div>
             </td>
@@ -73,24 +73,27 @@
         <div class="form-group">
           <label>Statement Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterStatementDate">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterStatementDate" placeholder="Please select statement date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
             <span [owlDateTimeTrigger]="dt" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
             <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
           </div>
+          <div class="text-danger" *ngIf="filterToDateError">
+            {{filterToDateErrorMessage}}
+          </div>
         </div>
         <div class="form-group">
           <label>Statement Period</label>
-          <input type="text" class="form-control" formControlName="filterStatementPeriod">
+          <input type="text" class="form-control" id="filterStatementPeriod" formControlName="filterStatementPeriod">
         </div>
         <div class="form-group">
           <label>Customer</label>
-          <input type="text" class="form-control" formControlName="filterStatementCustomer">
+          <input type="text" class="form-control" id="filterCustomer" formControlName="filterStatementCustomer">
         </div>
         <div class="form-group">
           <label>Account ID</label>
-          <input type="text" class="form-control" formControlName="filterStatementAccountId">
+          <input type="text" class="form-control" id="filterAccountId" formControlName="filterStatementAccountId">
         </div>
       </div>
       <!--[ngClass]="filterClass"-->
