--- a/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
@@ -20,33 +20,33 @@
 
           <!-- Position Column -->
           <ng-container matColumnDef="name">
-            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <th class="width30 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element">{{element.Schedule.Name}}</td>
           </ng-container>
           <ng-container matColumnDef="template">
-            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
+            <th class="width35" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Definition </th>
             <td mat-cell *matCellDef="let element"> {{element.Schedule.Statement.Name}} </td>
           </ng-container>
 
           <!-- Weight Column -->
           <ng-container matColumnDef="startDate">
-            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:"dd/MM/yyyy"}}</td>
+            <th class="width25 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Execution Date & Time</th>
+            <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:"dd/MM/yyyy h:mm a"}}</td>
           </ng-container>
 
           <!-- Symbol Column -->
-          <ng-container matColumnDef="endDate">
+          <!-- <ng-container matColumnDef="endDate">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
             <td mat-cell *matCellDef="let element">
               <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:"dd/MM/yyyy"}}</span>
               <span *ngIf='element.EndDate=="0001-01-01T00:00:00"'> - </span>
             </td>
-          </ng-container>
+          </ng-container> -->
 
-          <ng-container matColumnDef="DayOfMonth">
+          <!-- <ng-container matColumnDef="DayOfMonth">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
             <td mat-cell *matCellDef="let element"> {{element.Schedule.DayOfMonth}} </td>
-          </ng-container>
+          </ng-container> -->
 
           <ng-container matColumnDef="actions">
             <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
@@ -54,7 +54,7 @@
               <div class="action-btns btn-tbl-action">
                 <button type="button" title="Download" (click)="download(element)" ><span class="fa fa-download"></span></button>
                 <!--<a  title="Download" href="E:/TayyabaShaikh/NIS/API/Statements/1/statement31_07_2020_12_27_57.zip"><span class="fa fa-download"></span></a>-->
-                <button type="button" title="Export PDF"><span class="fa fa-file-pdf-o"></span></button>
+                <!-- <button type="button" title="Export PDF"><span class="fa fa-file-pdf-o"></span></button> -->
               </div>
             </td>
           </ng-container>
