--- a/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
+++ b/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
@@ -57,7 +57,7 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
       </div>
-      <div class="widget-area-grid padding-0 text-center text-danger" *ngIf='scheduleLogList!=undefined && scheduleLogList.length==0'>
+      <div class="widget-area-grid padding-0 text-center" *ngIf='scheduleLogList!=undefined && scheduleLogList.length==0'>
           <label>Please use the filter to see the statement records.</label>
       </div>
     </div>
