--- a/App/ClientApp/src/app/layout/widgets/add/add.component.html
+++ b/App/ClientApp/src/app/layout/widgets/add/add.component.html
@@ -29,7 +29,7 @@
               <div class="mb-3">
                 <h6 class="mb-1">{{selectedLink.DisplayName}}</h6>
 
-                <div><label class="mb-0">Decrtiption : </label><span class="ml-1">{{selectedLink.WidgetDescription}}</span></div>
+                <div><label class="mb-0">Description : </label><span class="ml-1">{{selectedLink.WidgetDescription}}</span></div>
                 <div><label class="mb-0">Page Types :</label> <h6 class="badge badge-secondary p-1 ml-1 mb-0">{{selectedLink.PageTypeNames}}</h6></div>
               </div>
               <div class="card card-shadow preview-container float-right width100" style="position:initial;right:0;">
