new logo added as well as bugs resolved related to add batch records

--- a/App/ClientApp/src/app/confirm-user/confirm-user.component.html
+++ b/App/ClientApp/src/app/confirm-user/confirm-user.component.html
@@ -1,12 +1,12 @@
 <div class="login-container">
   <div class="login-left d-flex justify-content-center align-items-center">
-    <img src="././assets/images/logo.png" class="login-logo" />
+    <img src="././assets/images/new_nis_logo_white.png" class="login-logo" />
   </div>
   <div class="login-right box-shadow">
     <div class="login-main">
       <div class="row d-lg-none d-md-block text-center">
         <div class="col-sm-12">
-          <img src="././assets/images/logo.png" class="login-logo" />
+          <img src="././assets/images/new_nis_logo_white.png" class="login-logo" />
         </div>
       </div>
       <!--login form-->
