--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class='top-bar fixed'>
   <button class="fa float-left hamburger xs-hamburger fa" (click)="toggleNav()" [ngClass]="collapse_toogleClass"></button>
   <div class="side-bar-logo text-center d-none d-md-block">
-    <img src="assets/images/logo.png" width="140">
+    <img src="assets/images/new_nis_logo_white.png" width="250">
   </div>
   <!--mobile start-->
   <div class="d-md-none float-right xs-top">
