--- a/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
+++ b/App/ClientApp/src/app/layout/dashboard/dashboard.component.html
@@ -9,28 +9,28 @@
       <div class="icon-production-plan-line2 dash-icon-bg-1 dash-icon"></div>
       <div class="dash-in">
         <h5 class="mb-0">10/06/2020</h5>
-        <div class="font20">Next Schedule</div>
+        <div class="font20">Last Completed Schedule Run</div>
       </div>
     </div>
     <div class="card card-bg-2 card-tile">
-      <div class="icon-production-plan-line2 dash-icon-bg-2 dash-icon"></div>
+      <div class="icon-line-dashboard2 dash-icon-bg-2 dash-icon"></div>
       <div class="dash-in">
         <h5 class="mb-0">12</h5>
-        <div class="font20">Exceptions</div>
+        <div class="font20">No of Completed Statements</div>
       </div>
     </div>
     <div class="card card-bg-3 card-tile">
       <div class="icon-operation-parameter-line2 dash-icon-bg-3 dash-icon"></div>
       <div class="dash-in">
         <h5 class="mb-0">02</h5>
-        <div class="font20">Pages</div>
+        <div class="font20">No of Active Exceptions</div>
       </div>
     </div>
     <div class="card card-bg-4 card-tile">
-      <div class="icon-operation-parameter-line2 dash-icon-bg-4 dash-icon"></div>
+      <div class="icon-reportGenerations2 dash-icon-bg-4 dash-icon"></div>
       <div class="dash-in">
         <h5 class="mb-0">02</h5>
-        <div class="font20">Pages</div>
+        <div class="font20">Statement Preview Remains</div>
       </div>
     </div>
   </div>
